--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 1.0
 Date: 2022-12-29
 Author: Qi Gao
 Maintainer: Qi Gao <qi.gao@duke.edu>
-Description: This package simulate single cell RNAseq data with more complicated differential expression and correlation structures, such as sub-cell-types, correlated genes (AR(1) correlation structure with bound, mimicking pathways) and hub genes.
+Description: This package is a modified version of the splatter R package. This package simulate single cell RNAseq data with more complicated differential expression and correlation structures, such as sub-cell-types, correlated genes (AR(1) correlation structure with bound, mimicking pathways) and hub genes. splatter was developed by Luke Zappia, Belinda Phipson, Christina Azodi, Alicia Oshlack and is available at https://bioconductor.org/packages/release/bioc/html/splatter.html.
 Encoding: UTF-8
-License: GPL (>= 2)
-Imports: MASS (>= 7.3-58.1), corpcor (>= 1.6.10)
+License: GPL (>= 3)
+Imports: MASS (>= 7.3-53.1), corpcor (>= 1.6.10)
 RoxygenNote: 7.2.1
