--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,8 @@
-import(MASS)
+useDynLib(GeneScape, .registration=TRUE)
+importFrom(Rcpp, evalCpp)
+import(sf)
+import(concaveman)
 import(corpcor)
-export("GeneScape")
+import(MASS)
+import(stats)
+exportPattern("^[[:alpha:]]+")
